--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
   "name": "url-shorten",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "Acortador de urls",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "start:prod": "node index.js",
-    "test": "set DB_NAME=url_shorten_test&& mocha tests/**/*.test.js",
-    "test:db": "set DB_NAME=url_shorten_test&& mocha tests/db/*.test.js",
-    "test:mid": "set DB_NAME=url_shorten_test&& mocha tests/middlewares/*.test.js",
-    "test:rt": "set DB_NAME=url_shorten_test&& mocha tests/routes/*.test.js"
+    "start:prod": "node index.js"
   },
+  "keywords": [],
   "author": "Engers Gustavo",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "pg": "^8.11.1"
+    "helmet": "^7.0.0",
+    "pg": "^8.11.2"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.2.0",
-    "nodemon": "^2.0.22",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.1"
   }
 }
