--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Acortador de urls",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "start:prod": "node index.js"
   },
   "keywords": [],
