--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js",
-    "build": "npm install"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Engers Gustavo",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
